<resources>
    <string name="app_name">StudentApp</string>
    <string name="inputUser">请输入用户名或手机号</string>
    <string name="User">账号：</string>
    <string name="inputPassword">请输入密码</string>
    <string name="Password">密码：</string>
    <string name="imposePassword">记住密码</string>
    <string name="Login">登录</string>
    <string name="Register">还没有账号？</string>
    <string name="forgottenPassword">忘记密码</string>
    <string name="Title">学生信息管理系统</string>
    <string name="user12288">账　　号：</string>
    <string name="password12288">密　　码：</string>
    <string name="verifyPassword">确认密码：</string>
    <string name="inputTwoPassword">请再次输入密码</string>
    <string name="right">注册</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">主页</string>
    <string name="title_add">添加</string>
    <string name="title_inspect">搜索</string>
    <string name="add_student_Info">添加学生信息</string>
    <string name="student_name">姓名：</string>
    <string name="input_name">请输入姓名</string>
    <string name="Gender">性别：</string>
    <string name="input_Gender">请输入性别</string>
    <string name="stuClass">年级：</string>
    <string name="input_stuClass">请输入年级</string>
    <string name="stuIdCard">学号：</string>
    <string name="input_stuIdCard">请输入学号</string>
    <string name="stuDate">入学时间：</string>
    <string name="input_stuDate">请输入入学时间</string>
    <string name="verify">确定</string>
    <string name="stuAge">年龄：</string>
    <string name="input_stuAge">请输入年龄</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="search">search</string>
    <string name="student_info">学生信息</string>
</resources>