<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:context=".RightActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user12288"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_account"
            style="@style/MyEditStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputUser"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password12288"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/MyEditStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputPassword"
            android:inputType="numberPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyPassword"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_password_Confirm"
            style="@style/MyEditStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputTwoPassword"
            android:inputType="numberPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/MyBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/right" />

</LinearLayout>